@@ -20,6 +20,7 @@ module Qwik
       title, tags = Page.get_title(self.get)
       return title if title
 
+=begin
       # FIXME: This is obsolete.
       # Check reverse hash.
       rev_hash = @pages.pagetitle.rev_hash
@@ -27,6 +28,7 @@ module Qwik
 	title = rev_hash[@key]
 	return title if title
       end
+=end
 
       # Abandon to get title and return the page key.
       return @key
