@@ -2,6 +2,7 @@
 # This is free software with ABSOLUTELY NO WARRANTY.
 # You can redistribute it and/or modify it under the terms of the GNU GPL 2.
 
+=begin
 $LOAD_PATH.unshift '..' unless $LOAD_PATH.include? '..'
 
 module Qwik
@@ -41,3 +42,4 @@ if defined?($test) && $test
     end
   end
 end
+=end
